--- a/.github/workflows/language.yml
+++ b/.github/workflows/language.yml
@@ -22,14 +22,19 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1. Checkout code
       - name: 1️⃣ Checkout code
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
-      # 2. Set up variables
-      - name: 2️⃣ Set up variables
+      - name: 2️⃣ Configure GitHub auth and identity
+        shell: bash
+        run: |
+          git config --global url."https://${{ secrets.CSK_PAT }}@github.com/".insteadOf "https://github.com/"
+          git config user.name "ianhub-bot"
+          git config user.email "bot@ianhub.net"
+
+      - name: 3️⃣ Set up variables
         id: vars
         run: |
           TAG_NAME=${GITHUB_REF#refs/tags/}
@@ -39,8 +44,7 @@ jobs:
           echo "name=$NAME" >> $GITHUB_OUTPUT
           echo "zip=$ZIP_NAME" >> $GITHUB_OUTPUT
 
-      # 3. Prepare ZIP contents
-      - name: 3️⃣ Prepare ZIP contents
+      - name: 4️⃣ Prepare ZIP contents
         run: |
           LANG_DIR="language/${{ steps.vars.outputs.name }}"
           if [ ! -d "$LANG_DIR" ]; then
@@ -57,13 +61,11 @@ jobs:
             fi
           done
 
-      # 4. Create ZIP archive
-      - name: 4️⃣ Create ZIP archive
+      - name: 5️⃣ Create ZIP archive
         run: |
           zip -r "${{ steps.vars.outputs.zip }}" "${{ steps.vars.outputs.name }}"
 
-      # 5. Create GitHub Release and Upload ZIP
-      - name: 5️⃣ Create GitHub Release and Upload ZIP
+      - name: 6️⃣ Create GitHub Release and Upload ZIP
         uses: softprops/action-gh-release@v2
         with:
           tag_name: ${{ steps.vars.outputs.tag }}
